force-app/main/default/objects/CRMfusionDBR101__Scenario_Rule__c/fields/CRMfusionDBR101__Mapping_Type__c.field-meta.xml
<CustomField>
    <fullName>CRMfusionDBR101__Mapping_Type__c</fullName>
    <label>Mapping Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Acronym</fullName>
            </value>
            <value>
                <fullName>Acronym (Cleaned Name)</fullName>
            </value>
            <value>
                <fullName>Clean Account Name</fullName>
            </value>
            <value>
                <fullName>Country Match</fullName>
            </value>
            <value>
                <fullName>Domain</fullName>
            </value>
            <value>
                <fullName>Exact</fullName>
                <default>true</default>
                <label>Exact</label>
            </value>
            <value>
                <fullName>First Name</fullName>
            </value>
            <value>
                <fullName>First XX Letters</fullName>
            </value>
            <value>
                <fullName>First XX Words</fullName>
            </value>
            <value>
                <fullName>Numeric</fullName>
            </value>
            <value>
                <fullName>Regular Expression</fullName>
            </value>
            <value>
                <fullName>Regular Expression Y/N</fullName>
            </value>
            <value>
                <fullName>Relaxed Domain</fullName>
            </value>
            <value>
                <fullName>Relaxed NA Phone Match</fullName>
            </value>
            <value>
                <fullName>Relaxed Street Address Match</fullName>
            </value>
            <value>
                <fullName>Salesforce.com ID Match</fullName>
            </value>
            <value>
                <fullName>State Match</fullName>
            </value>
            <value>
                <fullName>Street Address Match</fullName>
            </value>
            <value>
                <fullName>Zip 5 and 9</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>