force-app/main/default/objects/CRMfusionDBR101__Scenario_Rule__c/fields/CRMfusionDBR101__Related_Field_Display_Value__c.field-meta.xml
<CustomField>
    <fullName>CRMfusionDBR101__Related_Field_Display_Value__c</fullName>
    <description>The field we&#39;re matching against on the Account/Contact objects for Lead to X scenarios.</description>
    <inlineHelpText>This is the Account or Contact field that is matched against the Lead field in this rule for Lead to Account or Lead to Contact scenarios.</inlineHelpText>
    <label>Related Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>