force-app/main/default/objects/CRMfusionDBR101__Scenario_Rule__c/fields/CRMfusionDBR101__Scenario_Type__c.field-meta.xml
<CustomField>
    <fullName>CRMfusionDBR101__Scenario_Type__c</fullName>
    <inlineHelpText>This must be the same as the parent scenario&#39;s type.</inlineHelpText>
    <label>Scenario Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>Contact</fullName>
            </value>
            <value>
                <fullName>Lead</fullName>
            </value>
            <value>
                <fullName>Lead to Contact</fullName>
            </value>
            <value>
                <fullName>Lead to Account</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>